<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">hgDroid</string>
    <string name="settings_label">Settings</string>
    <string name="settings_title">hgDroid Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="server_string">Server</string>
    <string name="server_desc">IP address or hostname of hgd server</string>
    <string name="port_string">Port</string>
    <string name="port_desc">Port to use on the hgd server</string>
    <string name="disconnect_label">Quit</string>
    <string name="disconnect_shortcut">q</string>
    <string name="enable_ssl">Enable SSL</string>
    <string name="ssl_desc">Secures server communications with SSL</string>
    <string name="username_string">Username</string>
    <string name="username_desc">Your user name on the hgd server</string>
    <string name="password_string">Password</string>
    <string name="password_desc">Your password for the hgd server</string>
    <string name="app_desc">Submit tracks to a Hackathon Günther Daemon server</string>
    <string name="nowplaying">Now Playing:</string>
    <string name="crap_song">Crap Song!</string>
    <string name="select_song_intent">Select Song</string>
    <string name="close">Close</string>
    <string name="user_image_description">User Image</string>
    <string name="queue_shortcut">t</string>
    <string name="queue_song">Queue Song</string>
    <string name="first_run_message">Welcome to hgDroid!\nPlease add the server details or scan a barcode to begin!</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="error_opening_song">Could not open song</string>
    <string name="no_songs">No songs</string>
    <string name="app_credits">Credits\n\nIcon by theartofindigo.com\n\nUses the awesome Picasso library for image download and caching.\nsquare.github.io/picasso\n\nUses Google GSON for JSON parsing.\ncode.google.com/p/google-gson</string>
    <string name="about_label">About</string>
    <string name="about_shortcut">a</string>
    <string name="app_url" translatable="false">canthack.org</string>
    <string name="save_settings_message">Save these settings? This will overwrite previous values for Server and Port!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_settings_message_first_run">Save these settings?</string>
    <string name="hgd_uri_scheme">hgd</string>
    <string name="scan_barcode">Scan HGD Barcode</string>
    <string name="scan_shortcut">s</string>
    <string name="settings_saved_toast">Settings saved</string>
</resources>
