<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mitmQueue"
        android:alphabeticShortcut="@string/queue_shortcut"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/queue_song" />
    <item
        android:id="@+id/mitmSettings"
        android:alphabeticShortcut="@string/settings_shortcut"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never"
        android:title="@string/settings_label" />
    <item
        android:id="@+id/mitmDisconnect"
        android:alphabeticShortcut="@string/disconnect_shortcut"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/disconnect_label" />
</menu>
