<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_desc"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/app_url"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/about_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/app_credits"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

</LinearLayout>